--- a/Código/reservar-mesa/estilo/style.css
+++ b/Código/reservar-mesa/estilo/style.css
@@ -1,8 +1,12 @@
 @charset "UTF-8";
 
+#root {
+    width: 100%;
+    height: 100vh;
+}
 
-body{
-    background-color: #8B0707;
+body {
+    background-color: white;
 }
 
 .title{
@@ -17,10 +21,59 @@ select{
     padding-right: 150px;
     border-radius: 10px;
 }
-div{
-    width: 500px;
-    margin: auto;
+.App {
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
-p{
+.reserva {
+    width: 57.6%;
+    background-color: #8B0707;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.reserva p {
+    width: 30%;
+    margin-left: 19.1%;
+}
+
+.reserva input {
+
     
+    width: 37%;
+    padding-top: 20px;
+    border-radius: 10px;
+    background-color: white;
+    color: black;
+    align-items: center;
+
+}
+
+.reserva select {
+
+    width: 37%;
+    background-color: white;
+    color: black;
+
+}
+
+.traco {
+    background-color: #EEDA00;
+    width: 2.4%;
+    height: 100vh;
+}
+
+.status {
+    width: 40%;
+    height: 100vh;
+}
+
+.status h1 {
+    color: #8B0707;
+}
+
+.pcolor {
+    color: #EEDA00;
 }
